# big-movies

./: DATA_COLLECTION.md  ETL_PLAN.md  OLAP_ANALYSIS.md  README.md  main.typ
backend/: API_DOCS.md  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  database.py
backend/app/routers/: finance.py  genres.py  movies.py  overview.py  people.py  ratings.py  temporal.py
docs/: ETL_PLAN.md  main.typ
frontend/: next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  chart-theme.ts
ingestion/imdb/: .gitignore  .last_checksum  README.md  index.ts  package.json
ingestion/movielens/: .gitignore  README.md  index.ts  package.json
ingestion/rotten_tomatoes/: README.md  index.ts  package.json  rt_crawl_state.db
ingestion/tmdb/: .gitignore  README.md  env.example  index.ts  package.json
processing/: .env.example  SPARK_ETL_PLAN.md  pyproject.toml
processing/config/: paths.py  schemas.py
processing/jobs/bronze/: ingest_imdb.py  ingest_movielens.py  ingest_rotten_tomatoes.py  ingest_tmdb.py
processing/jobs/gold/: build_bridge_cast.py  build_bridge_genres.py  build_dim_genre.py  build_dim_movie.py  build_dim_person.py  build_dim_time.py  build_fact_metrics.py  load_postgres.py
processing/jobs/silver/: build_entity_spine.py  clean_imdb.py  clean_movielens.py  clean_rotten_tomatoes.py  clean_tmdb.py
processing/lib/: io_utils.py  transformations.py
processing/loader/: __init__.py  cli.py  loader.py
processing/scripts/: deploy.sh  run_bronze.sh  run_gold.sh  run_silver.sh
warehouse/: schema.sql
(+27 files in other folders)
